--- a/app/views/index.html
+++ b/app/views/index.html
@@ -4,7 +4,6 @@
     <title>slack4Linux</title>
 </head>
 <body>
-	<h1>slack4Linux</h1>
-	<p>Linux Slack Client</p>
+  <iframe src="https://slack.com/signin" nwdisable></iframe>
 </body>
 </html>
