Simple changes for the webview having a shitty splash page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <title>slack4Linux</title>
+    <link rel="stylesheet" href="../css/main.css" />
 </head>
 <body>
-  <iframe src="https://slack.com/signin" nwdisable></iframe>
+  <iframe src="https://slack.com/signin" nwdisable nwfaketop frameBorder="0"></iframe>
 </body>
 </html>
