--- a/app/views/index.html
+++ b/app/views/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>slack4Linux</title>
     <link rel="stylesheet" href="../css/main.css" />
+    <script src="../js/index.js" ></script>
 </head>
 <body>
   <iframe src="https://slack.com/signin" nwdisable nwfaketop frameBorder="0"></iframe>
