--- a/app/views/index.html
+++ b/app/views/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>slack4Linux</title>
   <link rel="stylesheet" href="../css/main.css" />
+  <script src="../bower_components/favico.js/favico.js"></script>
   <script src="../js/index.js" ></script>
 </head>
 <body>
