Change the app name in the visible html

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>slack4Linux</title>
+  <title>slack-for-linux</title>
   <link rel="stylesheet" href="../css/main.css" />
   <script src="../bower_components/favico.js/favico.js"></script>
   <script src="../js/index.js" ></script>
