--- a/app/views/index.html
+++ b/app/views/index.html
@@ -3,7 +3,8 @@
 <head>
   <title>slack-for-linux</title>
   <link rel="stylesheet" href="../css/main.css" />
-  <script src="../bower_components/favico.js/favico.js"></script>
+  <!-- DEV: favico.js is required to be loaded via `script` due to window properties like navigator not existing -->
+  <script src="../node_modules/favico.js/favico.js"></script>
   <script src="../js/index.js" ></script>
 </head>
 <body>
