--- a/app/views/index.html
+++ b/app/views/index.html
@@ -4,7 +4,7 @@
   <title>slack-for-linux</title>
   <link rel="stylesheet" href="../css/main.css" />
   <!-- DEV: favico.js is required to be loaded via `script` due to window properties like navigator not existing -->
-  <script src="../node_modules/favico.js/favico.js"></script>
+  <script src="../../node_modules/favico.js/favico.js"></script>
   <script src="../js/index.js" ></script>
 </head>
 <body>
