Updated all references from slack-for-linux to plaidchat

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>slack-for-linux</title>
+  <title>plaidchat</title>
   <link rel="stylesheet" href="../css/main.css" />
   <!-- DEV: favico.js is required to be loaded via `script` due to window properties like navigator not existing -->
   <script src="../../node_modules/favico.js/favico.js"></script>
@@ -9,7 +9,7 @@
 </head>
 <body>
   <script>
-    window.webslack.load();
+    window.plaidchat.load();
   </script>
 </body>
 </html>
