--- a/app/css/main.css
+++ b/app/css/main.css
@@ -7,15 +7,15 @@ html, body {
 	overflow: hidden;
 }
 
-body {
+/* Application specific classes */
+/* Application container */
+.slack-application {
 	display: flex;
+	height: 100%;
 }
 
-.hidden {
-	display: none;
-}
-
-.team-select {
+/* Team sidebar */
+.team-sidebar {
 	background: #362533;
 	color: white;
 	/* Width is 44px + 1rem padding */
@@ -25,15 +25,15 @@ body {
 	text-align: center;
 }
 
-.team-select a {
+.team-sidebar a {
 	color: inherit;
 }
 
-.team-select__item {
+.team-sidebar__item {
 	list-style: none;
 }
 
-.team-select__item img {
+.team-sidebar__item img {
 	/* http://viewsource.in/https://slack.global.ssl.fastly.net/c239/style/rollup-client_secondary.css#L1070 */
 	border-radius: 0.2rem;
 
@@ -42,7 +42,7 @@ body {
 	width: auto;
 }
 
-.team-select__item--active::before {
+.team-sidebar__item--active::before {
 	display: block;
 	position: absolute;
 	content: '\A0';
@@ -56,6 +56,18 @@ body {
 	border-radius: 0 0.2rem 0.2rem 0;
 }
 
-.slack-window--active {
+/* Window switcher */
+.slack-window-container {
+	height: 100%;
 	flex-grow: 1;
+}
+
+.slack-window {
+	width: 100%;
+	height: 100%;
+}
+
+/* Trumps */
+.hidden {
+	display: none;
 }
