--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,7 +7,8 @@
   <script src="../../node_modules/favico.js/favico.js"></script>
   <!-- We must use a special flavor of React with support for `nw.js` HTML attributes -->
   <script src="../../dist/js/react.js"></script>
-  <!-- DEV: AppTray needs to be loaded with access to `nw.gui` -->
+  <!-- DEV: AppMenu and AppTray need to be loaded with access to `nw.gui` -->
+  <script src="../components/app-menu.js" ></script>
   <script src="../components/app-tray.js" ></script>
   <script src="../js/index.js" ></script>
 </head>
