Experimenting with nw.js@0.13 but not liking new require business

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,7 @@
   <script src="../js/index.js" ></script>
 </head>
 <body>
+  <p>Loading...</p>
   <script>
     window.plaidchat.load();
   </script>
